# indie-studio

./: .gitignore  CMakeLists.txt  Doxyfile  FindBoost.cmake  Untitled Diagram.drawio  annotated.html  bomberman  classes.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_1699be727a800b1d059c6f7f2b91d2ee.html  dir_1a21b17d03bb503d21aab0be001df6f2.html  dir_2052808828190f934b76e979ee65af8a.html  dir_302be8c8c05d4a8a1b658633e2c436c0.html  dir_35781f0e74aa8deac19fa31b37174dc2.html  dir_39232d613c91489b4f110dc40aa2c66f.html  dir_4349d1fa869584df889de6bcd5ebc15a.html  dir_4bd560cd7db0ecaa7483470d9576be6d.html  dir_4d66bbe92bfbc1a7c734036fcbdebbd7.html  dir_5881792ac910349cf2e90a6dbebc193e.html  dir_5d87e61bea3832f8fd04dba59fd82b17.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6908ff505388a07996d238c763adbdab.html  dir_73efee319eeaf6e352bd6de855d59872.html  dir_7a584dfa3c81c2201f9f2ab4134b4f79.html  dir_7adfc6d0758d1683576e34cf18c5c987.html  dir_8a3cf1a5c5bf93320b00f96af4fa0d43.html  dir_a80282999626c2f17a23127c212d06bd.html  dir_acc2056b73c4fda97caebb7ceca7df66.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_c822fba584d6b34714b951392c8e263b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e41b1fbf4aed9913cb4e6f380447a8c5.html  dir_eb5e7b601d07e081ae7482a27243169c.html  dir_f0090da9a9c47ebb07687c5bee17d72e.html  dir_fcd885f1a88303dde966862518267a94.html  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  (+66 more)
.github/workflows/: deploy.yml  github-actions.yml
assets/: splash_logo.mtl  splash_text.mtl
assets/Muhammer/: Idle.fbx  LittleMuhammerRunning.fbx  Muhammer.mtl  MuhammerLittle.mtl  Muhammer_000038.mtl  Walking.fbx
assets/bomb/: bomb.blend  bomb.mtl  bombLittle.mtl
assets/bomberman/: Bombermanlittle.mtl  bomberman.mtl  bomberman_A_POSE.mtl
assets/box/: box.mtl
assets/bush/: bush.blend  bush.mtl  untitled.blend1
assets/fire/: fire.blend  fire.blend1  fire.mtl
assets/modeltest/: 2014.rar  woodbox.rar
assets/wall/: wall.blend  wall.blend1
d0/d09/: CoreRaylib_8cpp.html
d0/d0e/: IPlane_8hpp.html  IPlane_8hpp_source.html
d0/d12/: classMisc_1_1Colors-members.html
d0/d1c/: classIModels_1_1DrawModelWiresEx-members.html
d0/d1f/: classIndie_1_1Raylib_1_1Shape_1_1Line-members.html
d0/d22/: classIndie_1_1Raylib_1_1Shape_1_1Rectangle.html
d0/d29/: classIndie_1_1Raylib_1_1Models_1_1ITriangle3D-members.html
d0/d2a/: classIndie_1_1Raylib_1_1Audio_1_1Music.html
d0/d39/: classIModels_1_1DrawModelWires-members.html
d0/d42/: Ellipse_8hpp.html  Ellipse_8hpp_source.html
d0/d43/: Boost_8cpp.html
d0/d44/: Boost_8hpp.html  Boost_8hpp_source.html
d0/d47/: Fire_8cpp.html
d0/d52/: ICore_8hpp.html  ICore_8hpp_source.html  classIndie_1_1Scene_1_1GameScene-members.html
d0/d55/: IGrid_8hpp.html  IGrid_8hpp_source.html
d0/d56/: classIndie_1_1Core_1_1SceneManagement-members.html
d0/d66/: namespaceindie.html
d0/d7e/: classIndie_1_1Raylib_1_1Models_1_1CylinderWires.html
d0/d8a/: classIndie_1_1Raylib_1_1Shape_1_1IRing.html
d0/d8f/: TransitionFadeOut_8hpp.html  TransitionFadeOut_8hpp_source.html  classMisc_1_1RayHitInfo.html
d0/d97/: Polygon_8cpp.html
d0/d9e/: Bomberman_8hpp.html  Bomberman_8hpp_source.html
d0/da2/: classMisc_1_1Colors.html
d0/dca/: classIModels_1_1GenMeshKnot.html
d0/dcc/: classIndie_1_1Core_1_1Core-members.html
d0/dd6/: classIndie_1_1Raylib_1_1AnimesRaylib.html
d0/de4/: classIModels_1_1MeshBinormals-members.html
d1/d10/: classIndie_1_1Scene_1_1TransitionFadeIn.html
d1/d15/: classMisc_1_1Vector.html
d1/d22/: classIndie_1_1Raylib_1_1Shape_1_1RectangleLines.html
d1/d2c/: classIndie_1_1Scene_1_1TransitionFadeOut-members.html
d1/d2e/: classIndie_1_1Raylib_1_1Shape_1_1PixelV.html
d1/d3b/: IText_8hpp.html  IText_8hpp_source.html
d1/d52/: classIndie_1_1Raylib_1_1Shape_1_1TriangleLines.html
d1/d53/: GenMesh_8hpp.html  GenMesh_8hpp_source.html
d1/d62/: classMisc_1_1RayHitInfo-members.html
d1/d63/: GameMenu_8cpp.html
d1/d87/: classIndie_1_1Raylib_1_1Models_1_1ILine3D.html
d1/d8d/: classIModels_1_1GenMeshCube-members.html
d1/d91/: classIndie_1_1Raylib_1_1Shape_1_1CircleSector-members.html
d1/d93/: classIndie_1_1Game_1_1BoostSpeed-members.html
d1/d97/: IRing_8hpp.html  IRing_8hpp_source.html  classIndie_1_1Raylib_1_1Shape_1_1RectangleLinesEx-members.html
d1/d98/: namespaceIndie_1_1Errors.html
d1/da1/: classIndie_1_1Raylib_1_1Core_1_1ICore-members.html
d1/da2/: classIndie_1_1Raylib_1_1Models_1_1CubeTexture.html
d1/da6/: namespaceIndie_1_1Raylib_1_1Audio.html
d1/dba/: Circle3D_8hpp.html  Circle3D_8hpp_source.html
d1/dbc/: classIModels_1_1GenMeshCylinder-members.html
d1/dbf/: Misc_2Texture_8cpp.html
d1/dc1/: classIndie_1_1Raylib_1_1Models_1_1CubeWiresV.html
d1/dd7/: SceneManagement_8cpp.html
d1/dda/: classIndie_1_1Raylib_1_1Shape_1_1LineStrip-members.html
d1/ddd/: classIndie_1_1Raylib_1_1Shape_1_1IPolygon.html
d1/de7/: classIndie_1_1Game_1_1GameObject.html
d1/dfc/: BoundingBox_8cpp.html
d2/d06/: classIndie_1_1Raylib_1_1Map-members.html
d2/d0a/: classIndie_1_1Raylib_1_1Shape_1_1Circle.html
d2/d21/: Box_8hpp.html  Box_8hpp_source.html
d2/d2e/: classIndie_1_1Raylib_1_1Shape_1_1CircleSectorLines.html
d2/d44/: classIndie_1_1Raylib_1_1Shape_1_1TriangleStrip-members.html
d2/d5c/: classIndie_1_1Raylib_1_1Models_1_1Ray-members.html
d2/d74/: namespaceIndie_1_1Raylib_1_1Shape.html
d2/d75/: Ellipse_8cpp.html  classIndie_1_1Scene_1_1GameScene.html
include/: Event.hpp  IEngines.hpp  Shape.hpp  indie.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  (+68 more)
src/: Core.hpp  LibraryLoader.cpp  LibraryLoader.hpp  main.cpp
(+780 files in other folders)
